# canton-defi-infrastructure

./: .dockerignore  .env.example  .gitignore  .gitmodules  .secrets.example  .telegram-session  CANTON_GRANT_TECHNICAL_RD.md  CLAUDE.md  Dockerfile  README.md  docker-compose.local-test.yml  docker-compose.local.example.yml  env.template  eslint.config.mjs  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.claude/: settings.local.json
.github/workflows/: build-canton-api-server.yml  build-canton-node.yml  deploy-ci.yml  deploy-minimal-stage.yml  deploy.yml  simple-deploy.yml  test.yml
PRD/: 00_INDEX.md  01_OVERVIEW.md  02_CURRENT_STATE.md  03_MILESTONES.md  04_ACCEPTANCE_CRITERIA.md
PRD/api-specs/: 16_REST_API_V2.md  17_GRPC_SERVICES.md
PRD/daml-contracts/: 05_EXISTING_CONTRACTS.md  06_NEW_MATCHING_ENGINE.md  07_NEW_LIQUIDITY_POOL.md  08_NEW_PRICE_ORACLE.md
PRD/frontend/: 12_EXISTING_FRONTEND.md  13_FRONTEND_ENHANCEMENTS.md
PRD/infrastructure/: 14_EXISTING_INFRA.md  15_INFRA_ENHANCEMENTS.md
PRD/rust-sdk/: 09_EXISTING_SDK.md  10_SDK_COMPLETION.md  11_NEW_CRATES.md
blockchain/: CANTON_NETWORKS_COMPLETE_REPORT.md  CANTON_OFFICIAL_K8S_DEVNET_GUIDE.md  CANTON_VALIDATOR_DEPLOYMENT_STATUS_2025_11_27.md  CANTON_VALIDATOR_FINAL_STATUS.md  CANTON_VALIDATOR_FIX_COMPLETE_REPORT.md  CANTON_VALIDATOR_UPDATE_COMPLETE.md  CANTON_VALIDATOR_UPDATE_TO_0.5.3_REPORT.md  CHECK_WHITELISTING_STATUS.md  COMPLETE_CANTON_VALIDATOR_DEPLOYMENT_GUIDE.md  COMPLETE_CANTON_VALIDATOR_DEVNET_DEPLOYMENT.md  CONNECT_NODE_65_108_15_30.md  CONNECT_STATIC_IPS_TO_CLUSTER.md  CONTINUE_SUPABASE_AUTH_DEPLOYMENT.md  CONTINUE_SUPABASE_JWKS_FIX.md  DEFI_CONNECT_DEVNET.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SESSION_REPORT.md  DEPLOY_TESTNET_VALIDATOR.md  DEVNET_ACCESS_REPORT.md  DEVNET_NODE_K8S_STATUS.md  DNS_AND_ROUTING_FOR_STATIC_IPS.md  FINAL_CANTON_VALIDATOR_DEPLOYMENT_REPORT.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_UPDATE_SUMMARY.md  HOST_DEPLOYMENT_GUIDE.md  IP_ROUTING_VERIFICATION_REPORT.md  IP_VALIDATION_REPORT.md  IP_VALIDATION_STATUS.md  JWKS_FIX_APPLY_INSTRUCTIONS.md  JWKS_FIX_FINAL_STATUS.md  LOCALE_FIX_SUMMARY.md  MAINNET_SECRET_DOCUMENTATION_RESEARCH.md  MAINNET_SECRET_OBTAINING_REPORT.md  MAINNET_SECRET_REQUEST_TEMPLATE.md  MAINNET_SECRET_SSH_ATTEMPT_REPORT.md  MANUAL_TEST_LINKS.md  NGINX_FIX_INSTRUCTIONS.md  NGINX_FIX_PORT_80_QUICK_FIX.md  NGINX_PORT_80_CONFLICT_DIAGNOSIS.md  OFFICIAL_CANTON_K8S_DEPLOYMENT_HELM.md  (+32 more)
blockchain/.claude/: settings.local.json
blockchain/config/: canton.conf  docker-compose.canton-validator.yml  fluent-bit.conf  onboarding-secrets.env.template  validator.conf
blockchain/docs/: CANTON_DEFI_ARCHITECTURE_BEST_PRACTICES.md  CANTON_VALIDATOR_SETUP.md  DEPLOY_VALIDATOR_NEW_SERVER.md
blockchain/k8s/: canton-validator-full-stack.yaml  connect-sync-simple.yaml  connect-synchronizer-job.yaml  cumberland-certs-configmap.yaml  devnet-refresh-onboarding-secret-job.yaml  get-mainnet-secret-job.yaml  get-onboarding-secret-job.yaml  ip-validation-job-ubuntu.yaml  ip-validation-job.yaml  ip-validation-mainnet.yaml  ip-validation-quick.yaml  ip-validation-testnet.yaml  participant-ledger-external-nodeport.yaml  participant-truststore-patch.yaml  sync-connect-final.yaml
blockchain/prompts/: CANTON_DEFI_BLOCK_DIAGRAM_PROMPT.md
blockchain/scripts/: alert-notifications.sh  auto-connect-and-setup.sh  auto-install-k3s.sh  canton-validator.service  check-validator-status.sh  connect-all-ips-to-cluster.sh  connect-and-deploy.sh  connect-node-65-108-15-30.sh  connect-synchronizer.sc  connect-to-k3s-after-reboot.sh  deploy-canton-validator-helm-devnet.sh  deploy-canton-validator.sh  deploy-host-direct.sh  deploy-on-server.sh  deploy-testnet-validator.sh  scan_test.sh  (+26 more)
canton/: participant.conf
cantonnet-omnichain-sdk/: Cargo.toml  SDK_BRIEF.md
cantonnet-omnichain-sdk/config/: bridge.yaml  example.yaml
cantonnet-omnichain-sdk/crates/bridge-api/: Cargo.toml
cantonnet-omnichain-sdk/crates/bridge-api/src/: handlers.rs  lib.rs  main.rs  middleware.rs  routes.rs
cantonnet-omnichain-sdk/crates/bridge-core/: Cargo.toml
cantonnet-omnichain-sdk/crates/bridge-core/src/: audit.rs  config.rs  crypto.rs  errors.rs  fees.rs  lib.rs  rate_limit.rs  state_machine.rs  traits.rs  types.rs
cantonnet-omnichain-sdk/crates/bridge-db/: Cargo.toml
cantonnet-omnichain-sdk/crates/bridge-db/migrations/: 001_init.sql  002_audit_indexes.sql  003_transfer_fee_offset.sql  004_audit_metadata_event_log.sql  005_asset_registry.sql
cantonnet-omnichain-sdk/crates/bridge-db/src/: lib.rs  models.rs  repository.rs
cantonnet-omnichain-sdk/crates/bridge-orchestrator/: Cargo.toml
cantonnet-omnichain-sdk/crates/bridge-orchestrator/src/: clients_stub.rs  health.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  recovery.rs
cantonnet-omnichain-sdk/crates/bsc-client/: Cargo.toml
cantonnet-omnichain-sdk/crates/bsc-client/src/: bridge_contract.rs  contracts.rs  event_listener.rs  gas_oracle.rs  lib.rs  nonce_manager.rs  provider.rs  tx_manager.rs
cantonnet-omnichain-sdk/crates/canton-ledger-api/src/: client.rs
cantonnet-omnichain-sdk/crates/canton-otc-api/: Cargo.toml
cantonnet-omnichain-sdk/crates/canton-otc-api/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  proto_builders.rs  reconnect.rs  routes.rs  state.rs  tests.rs
cantonnet-omnichain-sdk/docker/: Dockerfile.api-server
cantonnet-omnichain-sdk/docs/: CANTON_DEFI_ARCHITECTURE_BEST_PRACTICES.md  DEFI_SDK_EXPERTISE_RESEARCH.md  OTC_FRONTEND_REQUIREMENTS.md
cantonnet-omnichain-sdk/prompts/: ARCHITECTURE_ANALYSIS_BEST_PRACTICES_2025.md  BRIDGE_PROGRESS_STATUS.md  BSC_CANTON_BRIDGE_READE_PROMT_V3.md  BSC_CANTON_MASTER_PROMT_V2.md  CANTON_BSC_BRIDGE_READY_PROMPT.md  FINAL_IMPLEMENTATION_PLAN.md
config/: README.md  fin-configuration.json
contracts/: CantonBridge.sol
daml/: README.md  daml.yaml
docs/: NEXT_STEPS.md  README.md
k8s/: devnet-snat-fix.yaml
public/: manifest.json  robots.txt
scripts/: README.md
src/: middleware.ts
(+918 files in other folders)
