[package]
name = "bridge-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "REST API v1, handlers, middleware (auth, request_id, logging)"

[[bin]]
name = "bridge-api"
path = "src/main.rs"

[dependencies]
bridge-core = { path = "../bridge-core" }
bridge-db = { path = "../bridge-db" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
prometheus-client = { workspace = true }
