[package]
name = "bridge-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
sqlx = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
assert_matches = { workspace = true }
tokio-test = { workspace = true }
