[package]
name = "bridge-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PostgreSQL, SQLx, migrations, repository, audit log"

[dependencies]
bridge-core = { path = "../bridge-core" }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
