[package]
name = "canton-otc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "REST API server for Canton OTC platform — creates DAML OtcOffer contracts via Ledger API v2"

[[bin]]
name = "canton-otc-api"
path = "src/main.rs"

[dependencies]
canton-core = { path = "../canton-core" }
canton-ledger-api = { path = "../canton-ledger-api" }

axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
prost-types = "0.13"
rust_decimal = "1"
subtle = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
